--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,14 @@
+{{#unless isMobileApp}}
+  {{smart-banner
+    appIdAndroid = app_id
+    appIdIOS = ios_app_id
+    showAfterClose=3
+    showAfterVisit=3
+    iconUrl = bannerImage
+    title = appTitle
+    description = 'Crossroads'
+  }}
+{{/unless}}
 {{#if cart.checkout}}
   {{outlet}}
 {{else}}
