--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -32,8 +32,7 @@
               <div class="row">
                 {{#form-control}}
                   <div class="small-12 medium-8 columns">
-                    <span class="prefix">+852</span>
-                    {{numeric-input classNames="number_input" value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" required=true pattern=".{8,}" autoFocus=true}}
+                    {{input value=mobileOrEmail classNames="number_input center_align_placeholder" id="mobile" type=text pattern="(\+852[569]\d{7})|[^@\s]+@[^@\s]+" required='true'}}
                     <div class="small-12 columns input-error warning_empty login">
                       {{fa-icon "warning"}}&nbsp;&nbsp;{{t "login.mobile_warning"}}
                     </div>
