--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -124,7 +124,7 @@
                         <span class="prefix">+852</span>
                       </div>
                       <div class="small-9 large-11 columns">
-                        {{numeric-input value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" pattern=".{8,}" autoFocus=true}}
+                        {{numeric-input value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" pattern="^.{8}$" autoFocus=true}}
                       </div>
                     </div>
                     <div class='row'>
@@ -142,7 +142,7 @@
                     <div class="row">
                       <div class="small-12 large-12 columns">
                         <label class="form-label">The contact number you would like us to reach you on.</label>
-                        {{numeric-input value=preferredContactNumber name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
+                        {{numeric-input value=model.organisationsUser.preferredContactNumber name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
                       </div>
                     </div>
                     <div class='row'>
