change login page texts to consider email

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -22,10 +22,10 @@
           <div class="mobile center_align">
             <div class="row">
               <div class="small-12 columns">
-                <label class="form-label">{{t "login.hk_only"}}</label>
+                <label class="form-label">{{t "login.hk_mobile_or_email_only"}}</label>
               </div>
               <div class="small-12 columns">
-                <label class="form-label">{{t "login.sms_pincode"}}</label>
+                <label class="form-label">{{t "login.sms_email_pincode"}}</label>
               </div>
             </div>
 
