--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -105,7 +105,7 @@
                       {{#if model.user.email}}
                       {{input value=email value=model.user.email classNames="number_input center_align_placeholder" id="email" type="email" required='true' disabled='true'}}
                       {{else}}
-                      {{input value=email value=model.user.email classNames="number_input center_align_placeholder" id="email" type="email" required='true'}}
+                      {{input value=email value=email classNames="number_input center_align_placeholder" id="email" type="email" required='true'}}
                       {{/if}}
                     </div>
                     <div class="small-12 columns input-error warning_empty">
@@ -124,7 +124,11 @@
                         <span class="prefix">+852</span>
                       </div>
                       <div class="small-9 large-11 columns">
+                        {{#if model.user.mobile}}
+                        {{numeric-input value=model.user.mobile name="mobilePhone" id="mobile" maxlength="8" pattern="^.{8}$" autoFocus=true}}
+                        {{else}}
                         {{numeric-input value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" pattern="^.{8}$" autoFocus=true}}
+                        {{/if}}
                       </div>
                     </div>
                     <div class='row'>
@@ -143,9 +147,9 @@
                       <div class="small-12 large-12 columns">
                         <label class="form-label">{{t 'account.preffered_contact_label'}}</label>
                         {{#if (is-and model.organisationsUser model.organisationsUser.preferredContactNumber)}}
-                          {{numeric-input value=model.organisationsUser.preferredContactNumber name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
+                        {{numeric-input value=model.organisationsUser.preferredContactNumber name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
                         {{else}}
-                          {{numeric-input value="" name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
+                        {{numeric-input value="" name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
                         {{/if}}
                       </div>
                     </div>
