--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -2,9 +2,9 @@
 {{scroll-to-bottom customClass="account-detail-info-scroll-arrow"}}
 {{/if}}
 <div class="row">
-  <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12">
+  <div class="large-10 columns large-offset-1 medium-offset-1 medium-10 small-12">
     <div class="row checkout_pages">
-      <div class="small-12 columns">
+      <div class="small-12 medium-12 large-12 columns">
         <div class="row">
           <section class="main-section new-user-section ui login_page">
             <nav class="tab-bar">
@@ -116,14 +116,14 @@
                   <br>
                   <div class="row">
                     {{#form-control}}
-                    <div class="small-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                       <label class="form-label">{{t 'account.mobile'}}</label>
                     </div>
                     <div class="row">
-                      <div class="small-3 large-1 columns">
+                      <div class="small-2 large-1 columns">
                         <span class="prefix">+852</span>
                       </div>
-                      <div class="small-9 large-11 columns">
+                      <div class="small-10 large-11 columns">
                         {{#if model.user.mobile}}
                         {{numeric-input value=model.user.mobileWithoutCountryCode name="mobilePhone" id="mobile" maxlength="8" pattern="^.{8}$" autoFocus=true}}
                         {{else}}
@@ -143,20 +143,16 @@
                     <div class="small-12 columns">
                       <label class="form-label">{{t 'account.preffered_contact_number'}}</label>
                     </div>
-                    <div class="row">
-                      <div class="small-12 large-12 columns">
-                        <label class="form-label">{{t 'account.preffered_contact_label'}}</label>
-                        {{#if (is-and model.organisationsUser model.organisationsUser.preferredContactNumber)}}
-                        {{numeric-input value=model.organisationsUser.preferredContactNumber name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
-                        {{else}}
-                        {{numeric-input value="" name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
-                        {{/if}}
-                      </div>
+                    <div class="small-12 large-12 columns">
+                      <label class="form-label">{{t 'account.preffered_contact_label'}}</label>
+                      {{#if (is-and model.organisationsUser model.organisationsUser.preferredContactNumber)}}
+                      {{numeric-input value=model.organisationsUser.preferredContactNumber name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
+                      {{else}}
+                      {{numeric-input value="" name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
+                      {{/if}}
                     </div>
-                    <div class='row'>
-                      <div class="small-12 columns input-error warning_empty">
-                        {{fa-icon "warning"}}&nbsp;&nbsp; {{t 'account.preffered_contact_warning'}}
-                      </div>
+                    <div class="large-12 medium-12 small-12 columns input-error warning_empty">
+                      {{fa-icon "warning"}}&nbsp;&nbsp; {{t 'account.preffered_contact_warning'}}
                     </div>
                     {{/form-control}}
                   </div>
