fix back link on account details

--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -9,7 +9,7 @@
           <section class="main-section new-user-section ui login_page">
             <nav class="tab-bar">
               <section class="left-large">
-                {{#link-to "authenticate" classNames="back"}}{{fa-icon "angle-left"}} {{t "back"}}{{/link-to}}
+                {{#link-to "home" classNames="back"}}{{fa-icon "angle-left"}} {{t "back"}}{{/link-to}}
               </section>
               <section class="middle tab-bar-section">
                 <h1 class="title">{{t "account.account_details"}}</h1>
