show verified flag for email and mobile

--- a/app/styles/account_details.scss
+++ b/app/styles/account_details.scss
@@ -244,3 +244,11 @@
     cursor: pointer;
   }
 }
+
+.verified_icon{
+  margin-left: 5%;
+  .verified_text {
+    margin: 5%;
+    font-size: 0.7em;
+  }
+}
