add my-dashboard tab

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,6 +25,7 @@
 @import "scroll_icon_settings";
 @import "confirm_booking";
 @import "messages";
+@import "my_dashboard";
 
 @import "templates/home";
 @import "templates/loading";
