--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -36,8 +36,8 @@
 
     <li>
       {{#link-to "my_orders" class="menu-3"}}
-        <i class="fa fa-shopping-cart"></i>
-        <div>{{t "application.sidebar.myorders"}}</div>
+        <i class="fa fa-th-large"></i>
+        <div>{{t "application.sidebar.myDashboard"}}</div>
       {{/link-to}}
     </li>
 
