--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -1,7 +1,9 @@
-<div class="row my_orders">
-  <div class="title show-for-medium-up">{{t "my_orders.my_orders"}}</div>
+<div class="row my_dashboard">
+  <div class="title show-for-medium-up">{{t "my_dashboard.my_dashboard"}}</div>
+  {{partial 'my_dashboard/my_dashboard_tabs'}}
+
   <div class="small-12 columns content">
-    <div class="row">
+    <div class="row my_orders">
       <div class="columns button-container small-6">
         {{#link-to "browse"}}
           <div class="button light">
