add acceptance test cases for my dashboard page

--- a/app/templates/my_dashboard/_my_dashboard_tabs.hbs
+++ b/app/templates/my_dashboard/_my_dashboard_tabs.hbs
@@ -1,5 +1,5 @@
 <div class="row tabs tab-icons">
-  {{#link-to 'my_updates' tagName="div" classNames="small-4 orders tab columns text-center"}}
+  {{#link-to 'my_updates' tagName="div" classNames="small-4 updates tab columns text-center"}}
     {{#link-to 'my_updates' }}
       <i class="dashboard-menu">{{fa-icon 'bell-o'}}</i>
     {{/link-to}}
@@ -21,7 +21,7 @@
 <div class="row tabs tab-name active-tab">
   <div class="small-4 columns updates tab text-center">
   </div>
-  {{#link-to 'my_updates' tagName="div" classNames="small-4 orders tab active-tab columns text-center"}}
+  {{#link-to 'my_updates' tagName="div" classNames="small-4 updates tab active-tab columns text-center"}}
     {{#link-to 'my_updates' }}
       Updates
     {{/link-to}}
