--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -26,6 +26,7 @@
 @import "confirm_booking";
 @import "messages";
 @import "my_dashboard";
+@import "my_account";
 
 @import "templates/home";
 @import "templates/loading";
