--- a/app/templates/my_dashboard/_my_dashboard_tabs.hbs
+++ b/app/templates/my_dashboard/_my_dashboard_tabs.hbs
@@ -4,7 +4,7 @@
   {{/link-to}}
 
   {{#link-to 'my_orders' tagName="div" classNames="small-4 orders tab columns text-center"}}
-    <i class="dashboard-menu">{{fa-icon 'calendar'}}</i>
+    <i class="dashboard-menu">{{fa-icon 'shopping-cart'}}</i>
   {{/link-to}}
 
   {{#link-to 'my_account' tagName="div" classNames="small-4 account tab columns text-center"}}
