--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -116,6 +116,51 @@
                         </div>
                         {{/if}}
                       </div>
+                      {{else}}
+                      {{input value=email value=email classNames="number_input center_align_placeholder" id="email" type="email" required='true'}}
+                      {{/if}}
+                    </div>
+                    <div class="small-12 columns input-error warning_empty">
+                      {{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.email_warning"}}
+                    </div>
+                    {{/form-control}}
+                  </div>
+                  <br>
+                  <div class="row">
+                    {{#form-control}}
+                    <div class="large-12 medium-12 small-12 columns">
+                      <label class="form-label">{{t 'account.mobile'}}</label>
+                    </div>
+                    <div class="row">
+                      {{#if model.user.mobile}}
+                      <div class="small-5 columns mobile-disabled">
+                        {{model.user.mobile}}
+                      </div>
+                      {{#if model.user.isMobileVerified}}
+                      <div class="small-3 columns verified_icon">
+                        <span>
+                          {{fa-icon "check-circle-o"}}
+                          <span class="verified_text">verified</span>
+                        </span>
+                      </div>
+                      {{/if}}
+                      {{else}}
+                      <div class="small-2 large-1 columns">
+                        <span class="prefix">+852</span>
+                      </div>
+                      <div class="small-10 large-11 columns">
+                        {{#if model.user.mobile}}
+                        {{numeric-input value=model.user.mobileWithoutCountryCode name="mobilePhone" id="mobile" maxlength="8" pattern="^.{8}$" autoFocus=true}}
+                        {{else}}
+                        {{numeric-input value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" pattern="^.{8}$" autoFocus=true}}
+                        {{/if}}
+                      </div>
+                      {{/if}}
+                    </div>
+                    <div class='row'>
+                      <div class="small-12 columns input-error warning_empty">
+                        {{fa-icon "warning"}}&nbsp;&nbsp; {{t 'account.mobile_warning'}}
+                      </div>
                       {{/if}}
                     </div>
                     {{else}}
